# anki-generator

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  diff-2.txt  pyproject.toml  setup.sh  setup_symlinks.sh
.github/workflows/: ci.yml
docs/: README.md  architecture.md  development.md  history.md  issue-aivis-tts.md  roadmap.md  schema_rules.md
docs/architecture/: anki-integration.md  data-and-sync.md  skill-drivers.md
docs/decisions/: 0001-db-first-offline-pipeline.md  0002-merge-then-mirror-sync.md  0003-separate-private-data-repository.md  0004-identity-by-data-semantics.md  0005-reversible-archive.md  0006-repository-owned-anki-model.md  0007-shared-platform-and-skill-drivers.md  0008-shrink-first-legacy-migration.md  0009-kanji-root-identity-kana-surface.md  0010-explicit-fail-closed-tts-provider.md  0011-single-kanji-reading-acquisition.md  0012-in-place-card-edits.md  0013-aivis-reading-verification.md  0014-card-content-clock.md  0015-deletion-tombstones.md  README.md
docs/user_guide/: README.kr.md  README.md
src/anki_generator/: cli.py  common.py  config.py
tests/: conftest.py  db_support.py  test_anki_connector.py  test_cli.py  test_config.py  test_db_helper.py  test_lazy_imports.py  test_legacy_helper.py  test_pipeline.py  test_repository_boundaries.py  test_tts_helper.py  test_validator.py
tests/anki_connector/: test_cli.py  test_core.py  test_hyogai.py
tests/db_helper/: test_check_batch.py  test_cli.py  test_content_clock.py  test_core.py  test_hyogai_priority.py  test_insert.py  test_live_cards_guard.py  test_mirror.py  (+6 more)
(+137 files in other folders)
