[project]
name = "anki-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "edge-tts>=6.1.12",
    "janome>=0.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350"
]
