[project]
name = "anki-generator"
version = "0.1.0"
description = "Agent-driven Anki card pipeline for advanced Japanese learners"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=6.1.12",
    "janome>=0.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "joyokanji>=1.1.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350"
]

[tool.ruff.lint.per-file-ignores]
# Tests bootstrap sys.path before importing the package under test.
"tests/*" = ["E402"]

[project.scripts]
anki-gen = "anki_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_generator"]

